--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="/favicon.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Open+Sans"
+    rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>⚡ News Scanner</title>
   </head>
 
